infra/kubernetes/deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuttoo-worker
  namespace: nuttoo
  labels:
    app.kubernetes.io/name: nuttoo-worker
    app.kubernetes.io/part-of: nuttoo
    app.kubernetes.io/component: worker
spec:
  replicas: 2
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: nuttoo-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nuttoo-worker
        app.kubernetes.io/part-of: nuttoo
        app.kubernetes.io/component: worker
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      enableServiceLinks: false
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: app
          image: ghcr.io/nuttoo/nuttoo-worker:latest
          imagePullPolicy: IfNotPresent


          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"

          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: var-run
              mountPath: /var/run
      volumes:
        - name: tmp
          emptyDir: {}
        - name: var-run
          emptyDir: {}
